--- a/development/frontend/src/pages/pet/css/CreatePetProfile.css
+++ b/development/frontend/src/pages/pet/css/CreatePetProfile.css
@@ -1,4 +1,41 @@
-.pet-profile-create-page {
+@media only screen and (min-width: 821px) {
+
+  .pet-profile-create-page {
+    height: 100vh;
+    margin: 5%;
+  }
+  
+  .pet-profile-create-form {
+    background-color: white;
+    border-radius: 15px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .pet-profile-create-option-area {
+    height: 40px;
+  }
+  
+  .pet-profile-create-text {
+    border: 1px solid #c3a6a0;
+    border-radius: 8px;
+  }
+  
+  .pet-profile-create-text:focus {
+      outline: #c3a6a0;
+  }
+  }
+
+
+
+
+
+/* -----------------------------  Phone Ver. ----------------------------- */
+
+@media only screen and (max-width: 820px) {
+  .pet-profile-create-page {
   height: 100vh;
   margin: 5%;
 }
@@ -23,4 +60,5 @@
 
 .pet-profile-create-text:focus {
     outline: #c3a6a0;
+}
 }
