--- a/development/frontend/src/pages/pet/css/Vaccine.css
+++ b/development/frontend/src/pages/pet/css/Vaccine.css
@@ -1,3 +1,104 @@
+@media only screen and (min-width: 821px) {
+
+
+  .vaccine-body{
+    text-align: center;
+  }
+  
+  .vaccine-tittle {
+    margin: 2%;
+    font-size: 6vmin;
+    font-weight: 300;
+  }
+  
+  .vaccine {
+    border: 2px solid #f0dcda;
+    border-radius: 20px;
+    width: 80vw;
+    height: 80vw;
+  }
+  
+  .add-vaccine-button {
+    background: #e4655c;
+    margin: 5vmin;
+    border-radius: 25px;
+  }
+  
+  .vaccine-upload-container {
+      text-align: center; 
+      height: 20vh;
+  }
+  .vaccine-upload-tille {
+    font-size: 8vmin;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .mantine-121w2fi {
+    margin-left: 90px;
+  }
+  
+  .vaccine-folderupload{
+      font-size: 6vmin;
+      width: 35vw;
+      height: 10vw;
+      /* border: 5px solid black; */
+      background-color: #e0cdff;
+      color: #7c699b;
+      border-radius: 30px;
+      padding-top: 6px;
+      margin-left: 50px;
+  }
+  
+  .upload-vaccine-button{
+      font-size: 5vmin;
+      width: 30vw;
+      height: 4vh;
+      margin-top: 5vmin;
+      background: #f2968f;
+      border-radius: 30px;
+  }
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* -----------------------------  Phone Ver. ----------------------------- */
+
+@media only screen and (max-width: 820px) {
+
 .vaccine-body{
   text-align: center;
 }
@@ -33,7 +134,6 @@
 
 .vaccine-folderupload{
     font-size: 6vmin;
-    width: 80vw;
     height: 4vh;
     /* border: 5px solid black; */
     background-color: #e0cdff;
@@ -48,4 +148,5 @@
     margin-top: 5vmin;
     background: #f2968f;
     border-radius: 30px;
+}
 }
