--- a/development/frontend/src/components/DefaultHeader.css
+++ b/development/frontend/src/components/DefaultHeader.css
@@ -20,7 +20,7 @@
 
   .logoutCardDefault {
     background-color: aliceblue;
-    border: 2px solid rgb(0, 0, 0);
+    /* border: 2px solid rgb(0, 0, 0); */
     border-radius: 15px;
     position: absolute;
     top: 7.5vh;
