--- a/development/frontend/src/components/LoginFooter.css
+++ b/development/frontend/src/components/LoginFooter.css
@@ -1,19 +1,18 @@
 @media only screen and (min-width: 821px) {
-  .footer {
+  .footerLogin {
     background-color: #f0dcda;
     /* border: 2px solid rgb(255, 247, 0); */
-    height: 7vh;
-    width: 52%;
+    height: 50px;
+    width: 520px;
     position: fixed;
-    bottom: 0.5vh;
+    bottom: 1.5vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    font-size: 4vmin;
+    font-size: 30px;
     font-style: white !important;
-    border-radius: 40px;
+    border-radius: 30px;
   }
-
   .footer > div {
     display: flex;
     justify-content: center;
@@ -25,19 +24,19 @@
 /* ----------------------------- Laptop Ver. ----------------------------- */
 
 @media only screen and (max-width: 820px) {
-  .footer {
+  .footerLogin {
     background-color: #f0dcda;
     /* border: 2px solid rgb(255, 247, 0); */
-    height: 7vh;
-    width: 52%;
+    height: 5vh;
+    width: 65vw;
     position: fixed;
-    bottom: 0.5vh;
+    bottom: 1.5vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     font-size: 4vmin;
     font-style: white !important;
-    border-radius: 40px;
+    border-radius: 30px;
   }
   .footer > div {
     display: flex;
@@ -50,19 +49,19 @@
 /* -----------------------------  Phone Ver. ----------------------------- */
 
 @media only screen and (max-width: 767px) {
-  .footer {
+  .footerLogin {
     background-color: #f0dcda;
-    border: 2px solid rgb(255, 247, 0);
+    /* border: 2px solid rgb(255, 247, 0); */
     height: 8vh;
-    width: 95vw;
+    width: 90vw;
     position: fixed;
-    bottom: 1vh;
+    bottom: 2vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    font-size: 5vmin;
+    font-size: 6.5vmin;
     font-style: white !important;
-    border-radius: 40px;
+    border-radius: 30px;
   }
   .footer > div {
     display: flex;
