--- a/development/frontend/src/pages/InitialLanding.css
+++ b/development/frontend/src/pages/InitialLanding.css
@@ -24,20 +24,20 @@
     /* font-family: "Josefin Sans", sans-serif; */
     color: white;
     font-family: "Source Code Pro", monospace;
-    font-size: 10vmin;
+    font-size: 120px;
     position: relative;
     top: 10%;
-    left: -17%;
+    left: -6.5%;
   }
 
   .initialLandingSlogan {
     color: rgb(255, 233, 178);
     font-family: "Source Code Pro", monospace;
     font-weight: bold;
-    font-size: 6vmin;
+    font-size: 45px;
     position: relative;
     top: 15%;
-    left: 10%;
+    left: 11%;
   }
 
   .initialLandingLogin {
@@ -45,7 +45,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    top: 20%;
+    top: 13vmax;
   }
 
   .initialLandingLogin button {
@@ -72,8 +72,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    top: 30%;
+    position: fixed;
+    top: 17vmax;
     background: white;
     position: relative;
     width: 1000px;
