--- a/development/frontend/src/pages/place/css/Map.css
+++ b/development/frontend/src/pages/place/css/Map.css
@@ -1,34 +1,52 @@
-@media only screen and (min-width: 1000px) {
-  .pageContainer {
-    border: 3px solid black;
+@media only screen and (min-width: 821px) {
+  .mapContainerArea {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 5%;
-    padding-right: 5%;
+  }
+
+  .pageContainer {
+    /* border: 3px solid black; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 85vh;
+    width: 821px;
+    padding-top: 0.3%;
   }
 
   .filterContainer {
     border: 3px solid rgb(0, 0, 0);
-    height: 6%;
-    width: 50%;
+    border-radius: 40px;
+    height: 7%;
+    width: 95%;
     display: flex;
-    justify-content: center;
     align-items: center;
+    margin-bottom: 0.7%;
   }
 
   .searchContainer {
-    flex: 3;
+    width: 40%;
+    margin-right: 1%;
   }
 
-  .searchTrigger,
-  .categorTrigger {
-    flex: 1;
+  .categoryTrigger {
+    /* border: 3px solid rgb(0, 0, 0); */
+    margin-left: 7%;
+    margin-right: 8.5%;
+  }
+
+  .searchTrigger {
+    margin-right: 12%;
+  }
+
+  .searchTrigger button,
+  .categoryTrigger button,
+  .goListPage button {
+    border: none;
+    border-radius: 50px;
+    width: 70px;
+    height: 40px;
   }
 
   .categoryContainer {
@@ -41,6 +59,7 @@
     overflow: scroll;
     padding: 0 1% 0 1%;
   }
+
   .districtCategory,
   .typeCategory {
     /* border: 3px solid black; */
@@ -52,10 +71,245 @@
     display: flex;
     justify-content: center;
     position: relative;
-    width: 50%;
+    width: 90%;
     height: 90%;
     top: 0px;
-    border: 3px solid rgb(255, 204, 0);
+    /* border: 3px solid rgb(255, 204, 0); */
+    border-radius: 40px;
+    overflow: hidden;
+  }
+
+  .previewPlaceCard {
+    border: 3px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 20px;
+    position: absolute;
+    width: 300px;
+    height: 33vmin;
+    left: 3%;
+    z-index: 10000;
+  }
+
+  .cardSection {
+    border: 2px solid black;
+    border-radius: 20px;
+  }
+
+  .previewPicture2 {
+    border-radius: 20px;
+    height: 21vmin;
+  }
+
+  .closeCardButton {
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 10%;
+    left: 97%;
+    width: 2vmin;
+  }
+}
+
+/* ----------------------------- Laptop Ver. ----------------------------- */
+
+@media only screen and (max-width: 820px) {
+  .mapContainerArea {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .pageContainer {
+    /* border: 3px solid black; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 85vh;
+    width: 99vw;
+    padding-top: 0.3%;
+  }
+
+  .filterContainer {
+    border: 3px solid rgb(0, 0, 0);
+    border-radius: 40px;
+    height: 7%;
+    width: 95%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.7%;
+  }
+
+  .searchContainer {
+    width: 40%;
+    margin-right: 1%;
+  }
+
+  .categoryTrigger {
+    /* border: 3px solid rgb(0, 0, 0); */
+    margin-left: 7%;
+    margin-right: 8.5%;
+  }
+
+  .searchTrigger {
+    margin-right: 12%;
+  }
+
+  .searchTrigger button,
+  .categoryTrigger button,
+  .goListPage button {
+    border: none;
+    border-radius: 50px;
+    width: 70px;
+    height: 40px;
+  }
+
+  .categoryContainer {
+    border: 3px solid rgb(0, 208, 255);
+    display: flex;
+    justify-content: space-evenly;
+    top: 5vmin;
+    width: 100%;
+    height: 60%;
+    overflow: scroll;
+    padding: 0 1% 0 1%;
+  }
+
+  .districtCategory,
+  .typeCategory {
+    /* border: 3px solid black; */
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .mapContainer {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 90%;
+    height: 90%;
+    top: 0px;
+    /* border: 3px solid rgb(255, 204, 0); */
+    border-radius: 40px;
+    overflow: hidden;
+  }
+
+  .previewPlaceCard {
+    border: 3px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 20px;
+    position: absolute;
+    width: 300px;
+    height: 33vmin;
+    left: 3%;
+    z-index: 10000;
+  }
+
+  .cardSection {
+    border: 2px solid black;
+    border-radius: 20px;
+  }
+
+  .previewPicture2 {
+    border-radius: 20px;
+    height: 21vmin;
+  }
+
+  .closeCardButton {
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 10%;
+    left: 97%;
+    width: 2vmin;
+  }
+}
+
+/* -----------------------------  Phone Ver. ----------------------------- */
+
+@media only screen and (max-width: 767px) {
+  .mapContainerArea {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .pageContainer {
+    /* border: 3px solid black; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 85vh;
+    width: 99vw;
+    padding-top: 0.3%;
+  }
+
+  .filterContainer {
+    border: 3px solid rgb(0, 0, 0);
+    border-radius: 40px;
+    height: 7%;
+    width: 95%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.7%;
+  }
+
+  .searchContainer {
+    width: 40%;
+    margin-right: 1%;
+  }
+
+  .categoryTrigger {
+    /* border: 3px solid rgb(0, 0, 0); */
+    margin-left: 7%;
+    margin-right: 8.5%;
+  }
+
+  .searchTrigger {
+    margin-right: 12%;
+  }
+
+  .searchTrigger button,
+  .categoryTrigger button,
+  .goListPage button {
+    border: none;
+    border-radius: 50px;
+    width: 70px;
+    height: 40px;
+  }
+
+  .categoryContainer {
+    border: 3px solid rgb(0, 208, 255);
+    display: flex;
+    justify-content: space-evenly;
+    top: 5vmin;
+    width: 100%;
+    height: 60%;
+    overflow: scroll;
+    padding: 0 1% 0 1%;
+  }
+
+  .districtCategory,
+  .typeCategory {
+    /* border: 3px solid black; */
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .mapContainer {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 90%;
+    height: 90%;
+    top: 0px;
+    /* border: 3px solid rgb(255, 204, 0); */
+    border-radius: 40px;
     overflow: hidden;
   }
 
