--- a/development/frontend/src/components/Header.css
+++ b/development/frontend/src/components/Header.css
@@ -98,7 +98,7 @@
     width: 100vw;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-around;
     top: 0;
   }
 
@@ -108,8 +108,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 6.5%;
-    margin-right: 76%;
   }
 
   .logOut {
