--- a/development/frontend/src/pages/place/css/Map.css
+++ b/development/frontend/src/pages/place/css/Map.css
@@ -16,7 +16,7 @@
   }
 
   .filterContainer {
-    border: 3px solid rgb(0, 0, 0);
+    /* border: 3px solid rgb(0, 0, 0); */
     border-radius: 40px;
     height: 7%;
     width: 95%;
@@ -40,13 +40,234 @@
     margin-right: 8%;
   }
 
+  .closeFilterButton button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2vmax;
+  }
+
+  .filterButton button {
+    font-size: 1.3vmax;
+  }
+
+  .goListPage button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.5vmax;
+  }
+
   .searchTrigger button,
   .categoryTrigger button,
   .goListPage button {
+    background-color: #f6eabc;
     border: none;
     border-radius: 50px;
     width: 70px;
     height: 40px;
+  }
+
+  .districtCategory,
+  .typeCategory {
+    /* border: 3px solid black; */
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .categoryContainerMap {
+    border: 3px solid rgb(0, 208, 255);
+    border-radius: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: relative;
+    top: 5%;
+    width: 95%;
+    height: 75%;
+    overflow: scroll;
+    padding: 0 1% 0 1%;
+  }
+
+  .mantine-17do188,
+  .mantine-Checkbox-body {
+    border: 2px solid rgb(255, 99, 169);
+    border-radius: 15px;
+    width: 100px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+  }
+
+  .categoryContainerButton {
+    /* border: 2px solid rgb(255, 99, 169); */
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+  }
+
+  .categoryContainerButton button {
+    background-color: #f6eabc;
+    border: none;
+    border-radius: 40px;
+    width: 120px;
+    height: 60px;
+  }
+
+  .districtCategoryMap {
+    /* border: 3px solid rgb(255, 204, 0); */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 30vh;
+  }
+
+  .typeCategoryMap {
+    /* border: 3px solid rgb(255, 204, 0); */
+    border-top: 3px solid;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    /* justify-content: center; */
+    /* padding-left: 4%; */
+    height: 20vh;
+  }
+
+  .mapContainer {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 90%;
+    height: 89.5%;
+    top: 0px;
+    border: 3px solid rgb(255, 204, 0);
+    border-radius: 40px;
+    overflow: hidden;
+  }
+
+  .previewCardArea {
+    border: 3px solid black;
+    background-color: #f6eabc;
+    width: 23vmax;
+    height: 15vmax;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    position: fixed;
+    bottom: 4vmax;
+    z-index: 10000;
+  }
+
+  .mantine-xoj88x {
+    padding: 0;
+    overflow: visible;
+    background-color: rgba(255, 255, 255, 0);
+  }
+
+  .cardSection {
+    display: flex;
+    justify-content: center;
+    border: 2px solid black;
+    border-radius: 20px;
+    width: 13vmax;
+  }
+
+  .previewPicture2 {
+    border-radius: 20px;
+    height: 25vmin;
+  }
+
+  .closeCardButton {
+    border: 2px solid black;
+    display: flex;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    z-index: 100;
+  }
+}
+
+/* ----------------------------- Laptop Ver. ----------------------------- */
+
+@media only screen and (max-width: 820px) {
+  .mapContainerArea {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .pageContainer {
+    /* border: 3px solid black; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 85.4vh;
+    width: 90vw;
+    padding-top: 0.7%;
+  }
+
+  .filterContainer {
+    /* border: 3px solid rgb(0, 0, 0); */
+    border-radius: 40px;
+    height: 7%;
+    width: 95%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.7%;
+  }
+
+  .searchContainer {
+    width: 40%;
+    margin-right: 1%;
+  }
+
+  .categoryTrigger {
+    /* border: 3px solid rgb(0, 0, 0); */
+    margin-left: 5%;
+    margin-right: 9%;
+  }
+
+  .searchTrigger {
+    margin-right: 4%;
+  }
+
+  .filterButton button {
+    background-color: #f6eabc;
+    font-size: 2vmax;
+  }
+
+  .closeFilterButton button {
+    background-color: #f6eabc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3vmax;
+  }
+
+  .goListPage button {
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 5vmin;
+  }
+
+  .searchTrigger button,
+  .categoryTrigger button {
+    border: none;
+    border-radius: 50px;
+    background-color: #f6eabc;
+    height: 4vh;
+    width: 10vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5vmax;
   }
 
   .districtCategory,
@@ -112,7 +333,7 @@
     flex-wrap: wrap;
     align-items: center;
     /* justify-content: center; */
-    padding-left: 4%;
+    /* padding-left: 4%; */
     height: 20vh;
   }
 
@@ -121,164 +342,54 @@
     justify-content: center;
     position: relative;
     width: 90%;
-    height: 89.5%;
+    height: 92%;
     top: 0px;
     border: 3px solid rgb(255, 204, 0);
     border-radius: 40px;
     overflow: hidden;
   }
 
-  .previewPlaceCard {
+  .previewCardArea {
     border: 3px solid black;
-    width: 16vmax;
-    height: 14vmax;
+    background-color: #f6eabc;
+    width: 50vw;
+    height: 22vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     border-radius: 30px;
-    position: absolute;
-    left: 27%;
-    bottom: 11%;
+    position: fixed;
+    bottom: 9.5vmax;
     z-index: 10000;
   }
 
+  .mantine-xoj88x {
+    padding: 0;
+    overflow: visible;
+    background-color: rgba(255, 255, 255, 0);
+  }
+
   .cardSection {
+    display: flex;
+    justify-content: center;
     border: 2px solid black;
     border-radius: 20px;
-    width: 1vmax;
+    width: 13vmax;
   }
 
   .previewPicture2 {
     border-radius: 20px;
-    height: 21vmin;
+    height: 25vmin;
   }
 
   .closeCardButton {
     border: 2px solid black;
     display: flex;
-    justify-content: center;
-    position: relative;
-    top: 10%;
-    left: 97%;
-    width: 2vmin;
-  }
-}
-
-/* ----------------------------- Laptop Ver. ----------------------------- */
-
-@media only screen and (max-width: 820px) {
-  .mapContainerArea {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .pageContainer {
-    /* border: 3px solid black; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 85vh;
-    width: 99vw;
-    padding-top: 0.5%;
-  }
-
-  .filterContainer {
-    border: 3px solid rgb(0, 0, 0);
-    border-radius: 40px;
-    height: 7%;
-    width: 95%;
-    display: flex;
-    align-items: center;
-    margin-bottom: 0.7%;
-  }
-
-  .searchContainer {
-    width: 40%;
-    margin-right: 1%;
-  }
-
-  .categoryTrigger {
-    /* border: 3px solid rgb(0, 0, 0); */
-    margin-left: 7%;
-    margin-right: 8.5%;
-  }
-
-  .searchTrigger {
-    margin-right: 12%;
-  }
-
-  .searchTrigger button,
-  .categoryTrigger button,
-  .goListPage button {
-    border: none;
-    border-radius: 50px;
-    width: 70px;
-    height: 40px;
-  }
-
-  .categoryContainer {
-    border: 3px solid rgb(0, 208, 255);
-    display: flex;
-    justify-content: space-evenly;
-    top: 5vmin;
-    width: 100%;
-    height: 60%;
-    overflow: scroll;
-    padding: 0 1% 0 1%;
-  }
-
-  .districtCategory,
-  .typeCategory {
-    /* border: 3px solid black; */
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .mapContainer {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    width: 90%;
-    height: 90%;
-    top: 0px;
-    /* border: 3px solid rgb(255, 204, 0); */
-    border-radius: 40px;
-    overflow: hidden;
-  }
-
-  .previewPlaceCard {
-    border: 3px solid black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-radius: 20px;
     position: absolute;
-    width: 300px;
-    height: 33vmin;
-    left: 3%;
-    z-index: 10000;
-  }
-
-  .cardSection {
-    border: 2px solid black;
-    border-radius: 20px;
-  }
-
-  .previewPicture2 {
-    border-radius: 20px;
-    height: 21vmin;
-  }
-
-  .closeCardButton {
-    border: 2px solid black;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    top: 10%;
-    left: 97%;
-    width: 2vmin;
+    top: 5%;
+    right: 0.7%;
+    z-index: 100;
   }
 }
 
@@ -296,9 +407,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 85vh;
-    width: 99vw;
-    padding-top: 0.3%;
+    height: 84vh;
+    width: 100vw;
+    padding-top: 0.7%;
   }
 
   .filterContainer {
@@ -318,32 +429,50 @@
 
   .categoryTrigger {
     /* border: 3px solid rgb(0, 0, 0); */
-    margin-left: 7%;
-    margin-right: 8.5%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   .searchTrigger {
-    margin-right: 12%;
+    margin-right: 4%;
+  }
+
+  .filterButton button {
+    color: black;
+    background-color: #f6eabc;
+    font-size: 2vmax;
+  }
+
+  .closeFilterButton button {
+    color: black;
+    background-color: #f6eabc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3vmax;
+  }
+
+  .goListPage button {
+    background-color: none;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 7vw;
   }
 
   .searchTrigger button,
-  .categoryTrigger button,
-  .goListPage button {
+  .categoryTrigger button {
     border: none;
     border-radius: 50px;
-    width: 70px;
-    height: 40px;
-  }
-
-  .categoryContainer {
-    border: 3px solid rgb(0, 208, 255);
+    color: black;
+    background-color: #f6eabc;
+    height: 4vh;
+    width: 16vw;
     display: flex;
-    justify-content: space-evenly;
-    top: 5vmin;
-    width: 100%;
-    height: 60%;
-    overflow: scroll;
-    padding: 0 1% 0 1%;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5vmax;
   }
 
   .districtCategory,
@@ -353,48 +482,117 @@
     flex-wrap: wrap;
   }
 
+  .categoryContainerMap {
+    border: 3px solid rgb(0, 208, 255);
+    border-radius: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: relative;
+    top: 5%;
+    width: 95%;
+    height: 90%;
+    overflow: scroll;
+    padding: 0 1% 0 1%;
+  }
+
+  .mantine-17do188,
+  .mantine-Checkbox-body {
+    border: 2px solid rgb(255, 99, 169);
+    border-radius: 15px;
+    width: 22vw;
+    height: 5vh;
+    display: flex;
+    align-items: center;
+  }
+
+  .categoryContainerButton {
+    /* border: 2px solid rgb(255, 99, 169); */
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+  }
+
+  .categoryContainerButton button {
+    border: none;
+    border-radius: 40px;
+    width: 120px;
+    height: 60px;
+  }
+
+  .districtCategoryMap {
+    border: 3px solid rgb(255, 204, 0);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 40vh;
+  }
+
+  .typeCategoryMap {
+    /* border: 3px solid rgb(255, 204, 0); */
+    border-top: 3px solid;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    height: 20vh;
+  }
+
   .mapContainer {
     display: flex;
     justify-content: center;
     position: relative;
     width: 90%;
-    height: 90%;
+    height: 92%;
     top: 0px;
-    /* border: 3px solid rgb(255, 204, 0); */
+    border: 3px solid rgb(255, 204, 0);
     border-radius: 40px;
     overflow: hidden;
   }
 
-  .previewPlaceCard {
+  .previewCardArea {
     border: 3px solid black;
+    background-color: #f6eabc;
+    width: 70vw;
+    height: 20vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border-radius: 20px;
-    position: absolute;
-    width: 300px;
-    height: 33vmin;
-    left: 3%;
+    align-items: center;
+    border-radius: 30px;
+    position: fixed;
+    bottom: 10.5vmax;
     z-index: 10000;
   }
 
+  .mantine-xoj88x {
+    padding: 0;
+    overflow: visible;
+    background-color: rgba(255, 255, 255, 0);
+  }
+
   .cardSection {
+    display: flex;
+    justify-content: center;
     border: 2px solid black;
     border-radius: 20px;
+    width: 13vmax;
   }
 
   .previewPicture2 {
     border-radius: 20px;
-    height: 21vmin;
+    height: 29vmin;
   }
 
   .closeCardButton {
     border: 2px solid black;
     display: flex;
-    justify-content: center;
-    position: relative;
-    top: 10%;
-    left: 97%;
-    width: 2vmin;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    z-index: 100;
   }
 }
