--- a/development/frontend/src/pages/pet/css/Vaccine.css
+++ b/development/frontend/src/pages/pet/css/Vaccine.css
@@ -1,62 +1,67 @@
 /* -----------------------------  Phone Ver. ----------------------------- */
 
 @media only screen and (max-width: 820px) {
+  .vaccine-page {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-  .vaccine-body{
+  .vaccine-body {
     text-align: center;
   }
-  
+
   .vaccine-tittle {
     margin: 2%;
     font-size: 6vmin;
     font-weight: 300;
   }
-  
+
   .vaccine {
     margin-top: 5%;
     border: 2px solid #f0dcda;
     border-radius: 20px;
   }
-  
+
   .add-vaccine-button {
     background: #f2968f;
     margin: 5vmin;
     border-radius: 25px;
   }
-  
+
   .vaccine-upload-container {
-      text-align: center; 
-      height: 20vh;
+    text-align: center;
+    height: 20vh;
   }
   .vaccine-upload-tille {
     font-size: 8vmin;
     /* width: 85vw; */
   }
-  
+
   .mantine-121w2fi {
     margin-left: 90px;
   }
-  
-  .vaccine-folderupload{
-    padding-top: 2%;
-      font-size: 6vmin;
-      width: 50vw;
-      height: 10vw;
-      /* border: 5px solid black; */
-      background-color: #e0cdff;
-      color: #7c699b;
-      border-radius: 30px;
-      margin-left: 15vw;
-  }
-  
-  .upload-vaccine-button{
-      font-size: 5vmin;
-      width: 30vw;
-      height: 10vw;
-      margin-top: 2vmin;
-      background: #f2968f;
-      border-radius: 30px;
 
+  .vaccine-folderupload {
+    padding-top: 2%;
+    font-size: 6vmin;
+    width: 50vw;
+    height: 10vw;
+    /* border: 5px solid black; */
+    background-color: #e0cdff;
+    color: #7c699b;
+    border-radius: 30px;
+    margin-left: 15vw;
+  }
+
+  .upload-vaccine-button {
+    font-size: 5vmin;
+    width: 30vw;
+    height: 10vw;
+    margin-top: 2vmin;
+    background: #f2968f;
+    border-radius: 30px;
   }
   .mantine-rqmd87 {
     border-radius: 30px;
@@ -64,18 +69,16 @@
 }
 /* -----------------------------  Pad Ver. ----------------------------- */
 @media only screen and (min-width: 821px) {
-
-
-  .vaccine-body{
+  .vaccine-body {
     text-align: center;
   }
-  
+
   .vaccine-tittle {
     margin: 2%;
     font-size: 6vmin;
     font-weight: 300;
   }
-  
+
   .vaccine {
     margin-top: 5%;
     border: 2px solid #f0dcda;
@@ -83,55 +86,49 @@
     width: 80vw;
     height: 80vw;
   }
-  
+
   .add-vaccine-button {
     background: #f2968f;
     margin: 5vmin;
     border-radius: 25px;
-    
   }
-  
+
   .vaccine-upload-container {
-      text-align: center; 
-      height: 20vh;
+    text-align: center;
+    height: 20vh;
   }
   .vaccine-upload-tille {
     font-size: 8vmin;
     display: flex;
     justify-content: center;
   }
-  
+
   .mantine-121w2fi {
     margin-left: 90px;
   }
-  
-  .vaccine-folderupload{
-      font-size: 6vmin;
-      width: 35vw;
-      height: 10vw;
-      /* border: 5px solid black; */
-      background-color: #e0cdff;
-      color: #7c699b;
-      border-radius: 30px;
-      padding-top: 2%;
-      margin-left: 8vw;
+
+  .vaccine-folderupload {
+    font-size: 6vmin;
+    width: 35vw;
+    height: 10vw;
+    /* border: 5px solid black; */
+    background-color: #e0cdff;
+    color: #7c699b;
+    border-radius: 30px;
+    padding-top: 2%;
+    margin-left: 8vw;
   }
-  
-  .upload-vaccine-button{
-      font-size: 5vmin;
-      width: 30vw;
-      height: 8vw;
-      margin-top: 2vmin;
-      background: #f2968f;
-      border-radius: 30px;
+
+  .upload-vaccine-button {
+    font-size: 5vmin;
+    width: 30vw;
+    height: 8vw;
+    margin-top: 2vmin;
+    background: #f2968f;
+    border-radius: 30px;
   }
 
   .mantine-rqmd87 {
     border-radius: 30px;
   }
-
-
 }
-
-
-
