--- a/development/frontend/src/pages/pet/css/PetProfile.css
+++ b/development/frontend/src/pages/pet/css/PetProfile.css
@@ -21,7 +21,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    background-color: #f7f1f0;
+    background-color: #fef7f6;
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2);
     border-radius: 35px;
     margin: 2%;
@@ -78,6 +78,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    background-color: rgb(253, 248, 248);
     color: #2b2b2e;
     font-weight: 150;
   }
