--- a/development/frontend/src/pages/user/css/UserProfile.css
+++ b/development/frontend/src/pages/user/css/UserProfile.css
@@ -17,12 +17,11 @@
   .user-card {
     display: flex;
     justify-content: center;
-    background-color: #f7f1f0;
+    background-color: #fef7f6;
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2);
     border-radius: 30px;
     margin: 2%;
-
-
+    width: 90vw;
   }
   
   .user-card > div:nth-child(1) {
@@ -63,7 +62,7 @@
   }
   
   .user-pet-profile {
-    background-color: #f7f1f0;
+    background-color: #f9f2f1;
     width: 85vw;
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
     border-radius: 65px;
